force-app/main/default/objects/MUSW__Complaint_Contact__c/fields/MUSW__Complaint__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint__c</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>