force-app/main/default/objects/MUSW__Complaint_Contact__c/fields/MUSW__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>